--- a/branches/marco/Conf_att_request/Conf_att_request-war/web/create.xhtml
+++ b/branches/marco/Conf_att_request/Conf_att_request-war/web/create.xhtml
@@ -64,11 +64,11 @@
 
 
 
-                                <h:outputText value="Country:"/>
-                                <p:selectOneMenu value="#{conference.country}" required="true" requiredMessage="Required Field">
+                                <p:outputLabel for="country" value="Country:"/>
+                                <p:selectOneMenu id="country" value="#{conference.country}" required="true" requiredMessage="Required Field">
                                     <f:selectItem itemValue="country" itemLabel="South Africa"/>
                                 </p:selectOneMenu>
-                                <br />
+                                <br/>
 
                                 <p:outputLabel for="city" value="City/State:"/>
                                 <p:inputText id="city" value="#{conference.city}" required="true" requiredMessage="Required Field">
@@ -82,31 +82,40 @@
                                     <f:selectItem itemLabel="Yes" itemValue="1"/>
                                     <f:selectItem itemLabel="No" itemValue="2" />
                                     <p:ajax event="change" update="isPresentingGrid"/>
+                                    <p:ajax event="keyup" update="isPresentingError"/>
                                 </p:selectOneRadio>
-                                <p:message for="isPresenting" />
+                                <p:message for="isPresenting" id="isPresentingError"/>
                             </h:panelGrid>
 
                             <h:panelGrid columns="3" id="isPresentingGrid" columnClasses="label, value, error">
                                 <p:outputLabel rendered="#{conference.isPresenting eq '1'}" for="paperTitle" value="Title of Paper:" title="Title of paper:"/>
-                                <p:inputText rendered="#{conference.isPresenting eq '1'}" id="paperTitle" value="#{conference.paperTitle}" required="true" requiredMessage="Required Field"/>
-                                <p:message for="paperTitle" />
+                                <p:inputText rendered="#{conference.isPresenting eq '1'}" id="paperTitle" value="#{conference.paperTitle}" required="true" requiredMessage="Required Field">
+                                    <p:ajax update="paperTitleError" event="keyup"/>
+                                </p:inputText>
+                                <p:message for="paperTitle" id="paperTitleError"/>
 
 
                                 <p:outputLabel rendered="#{conference.isPresenting eq '1'}" for="author" value="Specify All Authors and Affiliations:"/>
-                                <h:inputTextarea rendered="#{conference.isPresenting eq '1'}" id="author" value="#{conference.author}" required="true" requiredMessage="Required Field"/>
-                                <p:message for="author" />
+                                <p:inputTextarea rendered="#{conference.isPresenting eq '1'}" id="author" value="#{conference.author}" required="true" requiredMessage="Required Field">
+                                    <p:ajax update="authorError" event="keyup"/>
+                                </p:inputTextarea>
+                                <p:message for="author" id="authorError" />
                                 <br />
 
                                 <p:outputLabel rendered="#{conference.isPresenting eq '2'}" for="specialReason" value="Special Reason For Attendance:"/>
-                                <p:inputText rendered="#{conference.isPresenting eq '2'}" id="specialReason" value="#{conference.specialReason}" required="true" requiredMessage="Required Field"/>
-                                <p:message for="specialReason" />
+                                <p:inputText rendered="#{conference.isPresenting eq '2'}" id="specialReason" value="#{conference.specialReason}" required="true" requiredMessage="Required Field">
+                                    <p:ajax update="specialReasonError" event="keyup"/>
+                                </p:inputText>
+                                <p:message for="specialReason" id="specialReasonError"/>
 
                             </h:panelGrid>
 
                             <h:panelGrid columns="3" columnClasses="label, value, error">
                                 <p:outputLabel for="presentationDate" value="Date of Internal MSA Presentation:"/>
-                                <p:calendar id="presentationDate" value="#{conference.presentationDate}" navigator="true" showOn="button" required="true" requiredMessage="Required Field"/>
-                                <p:message for="presentationDate" />
+                                <p:calendar id="presentationDate" value="#{conference.presentationDate}" navigator="true" showOn="button" required="true" requiredMessage="Required Field">
+                                    <p:ajax update="presentationDateError" event="keyup"/>
+                                </p:calendar>
+                                <p:message for="presentationDate" id="presentationDateError"/>
 
                             </h:panelGrid>
 
@@ -118,15 +127,21 @@
 
                             <h:panelGrid columns="3" columnClasses="label, value, error">
                                 <p:outputLabel for="fromDate" value="Date From:"/>
-                                <p:calendar id="fromDate" value="#{conference.toDate}" navigator="true" showOn="button" required="true" requiredMessage="Required Field"/>
-                                <p:message for="fromDate" />
+                                <p:calendar id="fromDate" value="#{conference.toDate}" navigator="true" showOn="button" required="true" requiredMessage="Required Field">
+                                    <p:ajax update="fromDateError" event="keyup"/>
+                                </p:calendar>
+                                <p:message for="fromDate" id="fromDateError"/>
 
                                 <p:outputLabel for="toDate" value="Date To:"/>
-                                <p:calendar id="toDate" value="#{conference.fromDate}" navigator="true" showOn="button" required="true" requiredMessage="Required Field"/>
-                                <p:message for="toDate" />
+                                <p:calendar id="toDate" value="#{conference.fromDate}" navigator="true" showOn="button" required="true" requiredMessage="Required Field">
+                                    <p:ajax update="toDateError" event="keyup"/>
+                                </p:calendar>
+                                <p:message for="toDate" id="toDateError"/>
 
                                 <p:outputLabel for="diffDays" value="Days:"/>
-                                <p:inputText id="diffDays" value="#{conference.diffDays}" readonly="true" requiredMessage="Required Field"/>
+                                <p:inputText id="diffDays" value="#{conference.diffDays}" readonly="true">
+                                    <p:ajax update="diffDays" event="change"/>
+                                </p:inputText>
                                 <br />
 
                                 <h:outputText value="Do You Need Coverage For Teaching Commitments?" />
@@ -135,15 +150,18 @@
                                     <f:selectItem itemLabel="No" itemValue="no" />
                                     <f:selectItem itemLabel="N/A" itemValue="na" />
                                     <p:ajax event="change" update="coverOptionsGrid" />
+                                    <p:ajax update="coverOptionsError"/>
                                 </p:selectOneRadio>
-                                <p:message for="coverOptions" />
+                                <p:message for="coverOptions" id="coverOptionsError"/>
 
                             </h:panelGrid>
 
                             <h:panelGrid columns="3" id="coverOptionsGrid" columnClasses="label, value, error">
                                 <p:outputLabel rendered="#{conference.coverOptions eq 'yes'}" for="arrangements" value="Proposed Arrangements To Cover Teaching Tommitments:"/>
-                                <h:inputTextarea rendered="#{conference.coverOptions eq  'yes'}" id="arrangements" value="#{conference.coverDetails}" required="true" requiredMessage="Required Field"/>
-                                <p:message for="arrangements" />
+                                <p:inputTextarea rendered="#{conference.coverOptions eq  'yes'}" id="arrangements" value="#{conference.coverDetails}" required="true" requiredMessage="Required Field">
+                                    <p:ajax update="arrangementsError" event="keyup"/>
+                                </p:inputTextarea>
+                                <p:message for="arrangements" id="arrangementsError"/>
                             </h:panelGrid>
                         </p:panel>
                     </p:tab>
@@ -159,14 +177,17 @@
                                     <f:selectItem itemLabel="Research Grant" itemValue="Research Grant" />
                                     <f:selectItem itemLabel="Other (Specify below)" itemValue="Other" />
                                     <p:ajax event="change" update="fundingOptionsGrid"/>
+                                    <p:ajax event="keyup" update="fundingOptionsError"/>
                                 </p:selectOneRadio>
-                                <p:message for="fundingOptions" />
+                                <p:message for="fundingOptions" id="fundingOptionsError"/>
                             </h:panelGrid>
 
                             <h:panelGrid columns="3" id="fundingOptionsGrid" columnClasses="label, value, error">
                                 <p:outputLabel rendered="#{conference.fundingOptions eq 'Other'}" for="otherSources" value="Other Sources of Funding:"/>
-                                <p:inputText rendered="#{conference.fundingOptions eq 'Other'}" id="otherSources" value="#{conference.otherFunding}" required="true" requiredMessage="Required Field"/>
-                                <p:message for="otherSources" />
+                                <p:inputText rendered="#{conference.fundingOptions eq 'Other'}" id="otherSources" value="#{conference.otherFunding}" required="true" requiredMessage="Required Field">
+                                    <p:ajax event="keyup" update="otherSourcesError"/>
+                                </p:inputText>
+                                <p:message for="otherSources" id="otherSourcesError"/>
                             </h:panelGrid>
 
                             <h:panelGrid columns="3" columnClasses="label, value, error">
@@ -175,9 +196,10 @@
                                 <br />
 
                                 <p:outputLabel for="fund" value="Fund Name:"/>
-                                <p:inputText id="fund" value="#{conference.fundName}"/>
-                                <p:message for="fund" />
-
+                                <p:inputText id="fund" value="#{conference.fundName}">
+                                    <p:ajax event="keyup" update="fundError"/>
+                                </p:inputText>
+                                <p:message for="fund" id="fundError"/>
                             </h:panelGrid>
 
                             <p:commandButton value="Submit" update="growl" action="#{conference.save()}" ajax="false"/>
