--- a/branches/megamerge/mtams/mtams-war/web/login.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/login.xhtml
@@ -12,6 +12,7 @@
             <ui:define name="content">
                 <h:form class="form-2" id="loginForm" style="margin-top: 1%; left: 35%; top:35%; position: absolute; ">
                     <h1><span class="log-in">Log in</span></h1>
+					<p:messages id="loginMessage" showDetail="true" closable="true" autoUpdate="true" globalOnly="true" />
                     <p:focus context="loginPanel">
                         <h:panelGrid id="loginPanel" columns="3">
 
