--- a/branches/megamerge/mtams/mtams-war/web/authorizerHome.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/authorizerHome.xhtml
@@ -10,13 +10,14 @@
         <ui:composition template="./template/template.xhtml">
 
             <ui:define name="content">
-			
-			<p:messages autoUpdate="true" id="userTop" closable="true" showDetail="true" />
+            <h:form id="userHomeForm">
+                <p:messages autoUpdate="true" id="userTop" closable="true" showDetail="true" />
+
                 <p:panel id="appPanel" header="Current Applications">
                     <p:button outcome="#{userBean.goNewApp()}" icon="ui-icon-plus" id="createButton"  title="Create Button" value="Create New" />
 
-					<h4>Your application</h4>
-                    <p:dataTable id="applications" var="app" value="#{userBean.allApps}" emptyMessage="No Applications have been created">  
+
+                    <p:dataTable id="applications" var="app" binding="#{userBean.dataTable}" value="#{userBean.allApps}" rowKey="#{app.idapplication}" selectionMode="single" selection="#{userBean.selectedApp}" emptyMessage="No Applications have been created">  
                         <p:ajax event="rowSelect" listener="#{userBean.display()}" 
                                 update=":userHomeForm" />
                         <p:column headerText="Description" style="width:35%">  
@@ -34,8 +35,7 @@
 
 
                     </p:dataTable>
-					<br /><br />
-					<h4>Applications sent for approval</h4>
+                    <br /><br />
                     <p:dataTable id="approvals" var="appr" value="#{userBean.allApproved}" emptyMessage="No Applications have been created">  
                         
                         <p:column headerText="Application Name" style="width:35%">  
@@ -63,3 +63,4 @@
 
     </body>
 </html>
+
