--- a/mtams/mtams-war/web/accountCreate.xhtml
+++ b/mtams/mtams-war/web/accountCreate.xhtml
@@ -15,23 +15,32 @@
                     <legend><h3>Create Account</h3></legend>
 
                     <h:form id="createAccountForm">
+					<p:messages id="createMessages" closable="true" showDetail="true" severity="error" autoUpdate="true" globalOnly="true"/>
                         <p:focus id="createAccountForm">
                             <h:panelGrid id="createPanel" columns="4"> 
 
                                 <h:outputLabel for="username" value="Username:"/>
-                                <p:inputText id="username" label="Username" required="true" size="30" requiredMessage="Please type a username." value="#{adminBean.username}"/>
+                                <p:inputText id="username" label="Username" required="true" size="30" requiredMessage="Please type a username." value="#{adminBean.username}">
+								<f:validateLength minimum="3"/>
+                            <p:ajax update="msgUser" event="keyup" async="true"/>                            
+                        </p:inputText>
                                 <p:watermark for="username" value="Username *"/>
                                 <p:message for="username"/>
 
 
                                 <h:outputLabel for="password" value="Password:" />  
                                 <p:password id="password" label="Password:" required="true" size="30" match="confirmPassword" requiredMessage="Please enter your password." value="#{adminBean.password}" feedback="true" 
-                                            weakLabel="Weak :/" goodLabel="Good :)" strongLabel="Strong :D"/>
+                                            weakLabel="Weak :/" goodLabel="Good :)" strongLabel="Strong :D">
+											<f:validateLength minimum="5"/>                            
+                            <p:ajax update="msgPass, msgPass2" event="blur" async="true"/>
+                        </p:password>
                                 <p:watermark for="password" value="Password *"/>
                                 <p:message for="password"  />
 
                                 <h:outputLabel for="confirmPassword" value="Verify Password:" />  
-                                <p:password id="confirmPassword" label="Confirm Password:" required="true" size="30" requiredMessage="Please confirm your password." value="#{adminBean.password}"/>  
+                                <p:password id="confirmPassword" label="Confirm Password:" required="true" size="30" requiredMessage="Please confirm your password." value="#{adminBean.password}">
+								<p:ajax update="msgPass2, msgPass" event="blur" async="true"/>
+								</p:password>
                                 <p:watermark for="confirmPassword" value="Password *"/>
                                 <p:message for="confirmPassword"  />
 
