Updated to include currency lookup after database changes to remove composite primary keys that mess with Netbeans database entity creation and functionality.
The dialog list selection functionality not working as expected when with a simple currency_code, currency name, country name string array. Not pretty but it works. 

Will continue to build better country selection dialog as things progress.

--- a/branches/Aaron/DataLookup/DataLookup-war/web/lookuptest.xhtml
+++ b/branches/Aaron/DataLookup/DataLookup-war/web/lookuptest.xhtml
@@ -62,7 +62,7 @@ and open the template in the editor.
                     <f:selectItem  itemLabel="Select a Title" itemValue=""/>
                     <f:selectItems value="#{dataLookUpBean.leaveStrings}" />
                 </p:selectOneMenu>
-                
+
                 <p>Searchable / Filter list with filter="ture" attribute</p>
                 <p:selectOneMenu id="leaveStringfilter" editable="true" value="#{dataLookUpBean.leaveString}" filter="true" filterMatchMode="contains">
                     <f:selectItem  itemLabel="Select a Title" itemValue=""/>
@@ -84,6 +84,27 @@ and open the template in the editor.
                 <p:dataList value="#{dataLookUpBean.departmentStrings}" var="department" type="ordered" itemType="A">  
                     #{department}  
                 </p:dataList> 
+
+                <p>Number of elements in currency table : #{dataLookUpBean.currencyCount}</p>
+                <h:outputText value="string leave object : #{dataLookUpBean.currencyString}" />
+                <br />
+                <p:selectOneMenu id="Currency" editable="true" value="#{dataLookUpBean.currencyString}" filter="true" filterMatchMode="contains">
+                    <f:selectItem  itemLabel="Select a Title" itemValue=""/>
+                    <f:selectItems value="#{dataLookUpBean.currencyStrings}" />
+                </p:selectOneMenu>
+
+                <p:dataList value="#{dataLookUpBean.currencyStrings}" var="currency" type="ordered" itemType="A">  
+                    #{currency}  
+                </p:dataList> 
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                
             </h:form>
         </body>
     </ui:composition>
