--- a/branches/megamerge/mtams/mtams-war/web/superHome.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/superHome.xhtml
@@ -35,6 +35,7 @@
                     <p:menuitem value="Edit Admin" outcome="#{superAdminBean.goToEditAdmin()}" /> 
                     <p:menuitem value="Create Role" outcome="#{superAdminBean.goToCreateRole()}" />
                     <p:menuitem value="Deactivate Account" outcome="#{superAdminBean.goToDeactivateAccount()}" />
+                    <p:menuitem value="Department Handler" outcome="#{superAdminBean.goToDepartmentHandler()}" />                    
                 </p:submenu>
             </p:menubar>
 
